# quick_search

./: Cargo.toml  LICENSE  NOTICE  README.md
src/: main.rs
src/gui/: history.rs  info.rs  mod.rs  search_bar.rs  settings.rs
src/utils/: check_path.rs  execute_action.rs  get_apps.rs  helpers.rs  history_manager.rs  hotkey_listener.rs  hyprland_integration.rs  linux.rs  mod.rs  paths.rs  run_commands.rs  search.rs  settings_manager.rs  utils.rs  window_manger.rs  windows.rs
src/utils/wm_integrations/: awesome.rs  bspwm.rs  dwm.rs  generic_x11.rs  herbstluftwm.rs  hyprland.rs  i3.rs  leftwm.rs  mod.rs  qtile.rs  river.rs  sway.rs  xmonad.rs
