[package]
name = "quick_search"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
walkdir = "2.5.0"
meval = "0.2.0"
webbrowser = "1.0.6"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
arboard = "3.6.1"
single-instance = "0.3.3"
wl-clipboard-rs = "0.9.2"
hyprland = "0.4.0-alpha.3"
tokio = { version = "1.0", features = ["rt", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1